contendio esencial agregado

--- a/html/Pagina de categorias.html
+++ b/html/Pagina de categorias.html
@@ -9,8 +9,13 @@
 <body>
 
     <header>
+           <h1>Portal de Informacion Tecnologica </h1>
+           <h2> Bienvenido a la seccion de categorias </h2>
+           <p> en esta seccion se podra ver todas las categorias informativas 
+            para que navege y explore a su gusto </p> 
+
            <nav>
-               <a href="index.html"> Home </a>
+               <a href="../index.html"> Home </a>
                <a href="Pagina de categorias.html"> Categorias </a>
                <a href="Pagina de comparativa.html"> Comparativa </a>
            </nav>
@@ -19,11 +24,39 @@
 
 
     <main>
-    
+         <h2> Categorias para explorar </h2>
+         
+         <section id="categorias">
+                 <ul>
+                    <div class="cuadro_categoria">
+                    <li> Hardware </li>
+                    <p> lee y explara las ultimas noticias del mundo del hardware</p>
+                    </div>
+
+                    <div class="cuadro_categoria">
+                    <li> Programacion </li>
+                    <p> lee y explora las ultimas noticias del mundo de la programacion</p>
+                    </div>
+
+                    <div class="cuadro_categoria">
+                    <li> Leyes tecnologicas </li>
+                    <p> lee y explora las ultimas leyes tecnologicas para tus proyectos</p>
+                    </div>
+
+                    <div class="cuadro_categoria">
+                    <li> Gaming</li>
+                    <p> lee y explora las ultimas noticias para los gamers del mundo</p>
+                    </div>
+                  </ul>
+         </section>
+
     </main>
 
-    <footer>
+<hr>
 
+    <footer>
+           <h5> portal de informacion tecnologica </h5>
+           <h5> licence: hagan lo que quieran con esto </h5>
     </footer>
 
 
