--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
 <html lang="es">
 
 <head> 
-<title> mi primera pagina en linux </title>
+<title> Portal de Informacion Tecnologica </title>
 </head>
 
 <body>
-<h1> Bienvenido a mi primera pagina en linux </h1>
-<p> esta es mi primera pagina web en linux. no hay mucho que decir </p>
+
+<header>
+
+    <h1>Portal de Informacion Tecnologica </h1>
+    <p> Bienvenido al  Portal de informacion tecnologica mas popular del
+     mundo. aqui aprenderas lo ultimo en noticias,polemicas y gadgets 
+     en el amplio mundo de la tecnologia. </p> 
+
+    <img src="img/ip.png" alt="imagen descriptiva de la pagina">
+
+    <nav>
+         <a href="index.html"> Home </a>
+         <a href="html/Pagina de categorias.html"> Categorias </a>
+         <a href="html/Pagina de comparativa.html"> Comparativa </a>
+    </nav>
+
+</header>
+
+<main>
+
+    <section id="infoex">
+      <h2> Asus  nos salvara de la crisis de la ram </h2>
+      <a href="https://www.xataka.com/componentes/mercado-ram-esta-roto-hay-quien-apunta-a-nuevo-jugador-asus" > <img src="img/noticiaram.jpeg" alt="imagen externa de xataka mexico.  crisis ram" >   <a/>
+      <p> Al parecer asus fabricara nuevas memorias ram 
+          para servir como defensa ante la crisis de la ram.</p>
+    </section>
+
+</main>
+
+<hr>
+
+<footer>
+       <h5> portal de informacion tecnologica </h5>
+       <h5> licence: hagan lo que quieran con esto </h5>
+</footer>
+
 </body>
 
 
